# stack

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  package.json  stack.config.json  tsconfig.json  version.json
.codex/agents/: default.toml  explorer.toml  worker.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
.stack/guidance/: README.md  monitor-visible-context.md
.stack/monitors/: default.toml  free-aux.toml  gepa-dogfood.toml  handoff-preempt-gamebench.toml  progress-narrator.system.md  progress-narrator.toml  style-steer-smoke.toml
.stack/stackeval/: HARNESS.md  README.md  grader_prompt.md  pipeline.toml  reviewer_prompt.md
bundled/gardeners/: billed-glm.toml  default.system.md  default.toml  engineering.system.md  engineering.toml  free-aux.toml  product.system.md  product.toml  research.system.md  research.toml
bundled/guidance/: README.md  monitor-visible-context.md
bundled/monitors/: billed-glm.toml  default.system.md  default.toml  engineering.system.md  engineering.toml  free-aux.toml  product.system.md  product.toml  progress-narrator-chat.system.md  progress-narrator.system.md  progress-narrator.toml  research.system.md  research.toml
bundled/remote_gardeners/: default.system.md  default.toml
crates/stackd/: Cargo.toml
crates/stackd/src/: main.rs  mcp_sidecar.rs  monitor_scheduler.rs  openapi.rs  server.rs  victorialogs.rs
crates/stackd/src/handlers/: checkpoints.rs  export.rs  health.rs  logs.rs  mcp.rs  meta.rs  meta_threads.rs  mod.rs  runtime.rs  skills.rs  telemetry.rs  threads.rs
crates/stackd/src/meta/: mod.rs  reducer.rs  tick.rs
crates/stackd/src/runtime/: mod.rs  reducer.rs  scheduler.rs  store.rs
crates/stackd/src/runtime/sensors/: local_gepa.rs  mod.rs  remote_synth.rs
crates/topologies-core/: Cargo.toml
crates/topologies-core/src/: graph.rs  lib.rs
docs/: CRASH_INGESTION.md  DEVELOPERS.md  DISTRIBUTION.md  GROWTH_INGESTION.md  HANDOFF_resume_session_continuity.md  HANDOFF_ship_jul01.md  HANDOFF_sidecar_monitor.md  LAUNCH_READINESS.md  META_HARNESS_RUNTIME.md  NIGHTLY_1.md  NIGHTLY_1_SECURITY_WAIVER.md  QUALITY.md  RELEASE.md  SYNTH_PRODUCTIVITY.md  TELEMETRY.md  TELEMETRY_EVENTS.json  USAGE.md  first_class_stack_state_runtime.md
notes/: 2026-06-19-smr-code.txt
packaging/: install.sh
scripts/: accept_craftax_e2e.ts  accept_craftax_midflight.ts  accept_craftax_real_worker.ts  accept_gamebench_goal_matrix.ts  accept_goal_mode_ux.ts  accept_goal_status_negative.ts  accept_goal_status_tool.ts  accept_monitor_supervision.ts  apply_observability_retention.ts  bombadil_tui_b0.ts  bombadil_tui_b0_server.ts  bombadil_tui_scroll.ts  bombadil_tui_scroll_server.ts  bump_dev.ts  check_version_drift.ts  eval_gamebench_lane.ts  fake_codex_banking77_gepa.ts  fake_codex_goal_shutter.ts  fake_codex_jsonl.ts  fake_codex_long_jsonl.ts  fake_codex_stress_turn.ts  fake_codex_subagents_jsonl.ts  launch_readiness.ts  mock_banking77_gepa_receipt.sh  monitor_daemon.ts  monitor_wake_policy.py  nightly1_essentials.ts  nightly1_packet.ts  nightly_candidate.ts  nightly_cut_plan.ts  package_release_artifact.ts  prepare_public_flip.sh  probe_cursor_steer_cancel.ts  probe_stack_renderer_paste.ts  prove_goal_first_e2e.ts  publish_nightly.sh  release_check.ts  release_promote.ts  run_tictactoe_harbor_ab_pilot.ts  run_tictactoe_harbor_sidekick_pilot.ts  (+75 more)
src/: actor-config.ts  agent-roles.ts  auth-cli.ts  checkpoint-state.ts  config.ts  core-agent-events.ts  crash-reports.ts  demo.ts  doctor.ts  gamebench-goal.ts  gardener-chat.ts  gardener-config.ts  gardener-orchestrator.ts  gardener-skills.ts  gardener.ts  goal-criteria-state.ts  goal-session.ts  harness.ts  inference-cli.ts  main.ts  meta-goal.ts  meta-thread-goal-criteria.ts  meta-thread-goal.ts  monitor-daemon.ts  monitor-sidecar-codex.ts  monitor-synth-aux.ts  monitor.ts  operator-profile.ts  paths.ts  resume-checkpoint.ts  risky-action.ts  session.ts  skill-suggest.ts  synth-responses.ts  telemetry-digest.ts  telemetry.ts  thread-display-name.ts  thread-events.ts  update.ts  version-file.ts  (+1 more)
(+176 files in other folders)
