[workspace]
members = [
  "crates/stack-core",
  "crates/stackd",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stack-core = { path = "crates/stack-core" }
thiserror = "1.0"
tokio = { version = "1.39", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "time"] }
topologies-monty = { path = "../topologies/crates/topologies-monty" }
topologies-core = { path = "../topologies/crates/topologies-core" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
