[package]
name = "stackd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
futures-util.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
stack-core.workspace = true
tokio.workspace = true
topologies-core.workspace = true
topologies-monty.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
