[package]
name = "topologies-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
camino = { version = "1", features = ["serde1"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
schemars = { version = "0.8", features = ["chrono"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v7"] }
